# DOGO4ML-PYTHON

./: .gitignore  CONTRIBUTING.md  LICENSE  README  README.md  Trust.py  Trust_BN.py  Trust_RF_Credit_Card_Default.py  Trust_RF_German_Credit.py  Trust_RF_TED_Retention.py  Trust_RF_functions.py  Trust_RF_test.py  Trust_Weighted_Average.py  config.json  configuration_template.yml  demo_credit_card_default.py  demo_employees_retention.py  demo_german_credit.py  demo_pull_request_tests.py  german_data_new_structure.py  lime_explainer  logo.pptx  pull_request_tests.py  pyproject.toml  requirements.txt  ted_explanations  test_refactor_lime.py  test_refactor_ted.py  trust4RF_config.yml
cache/: trust_Retention.csv.cache  trust_credit_card_default.xls.cache  trust_german.data.cache
configs/: newTrust_config_german_credit_banker - red.yml  newTrust_config_german_credit_banker.yml  structure_test.yml  trust4RF_config_credit_card_default_banker.yml  trust4RF_config_credit_card_default_corporate.yml  trust4RF_config_german_credit_banker.yml  trust4RF_config_german_credit_corporate.yml  trust4RF_config_retention_HR.yml  trust4RF_config_retention_corporate.yml  trust_config_german_credit_banker - refactor.yml  trust_config_retention_corporate - refactor.yml
contributing/: how-to-use-labels.md  self-review.md  types-of-contributions.md
docs/: Trust.html  Trust_BN.html  Trust_Weighted_Average.html  Trustable_entity.html  computation.html  configreader.html  index.html  trust.html
html/: Trust.html  Trust_BN.html  Trust_Weighted_Average.html  index.html
old/: credit.py  (+2 more)
(+220 files in other folders)
